# notepad-7

./: main.py  pyproject.toml
content/: Main.qml
content/Aero7/: Button.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  TextField.qml  qmldir
content/Document/: NotepadDocument.qml
content/Toolbar/: EditMenu.qml  FileMenu.qml  FormatMenu.qml  HelpMenu.qml  NotepadMenuBar.qml  NotepadToolbar.qml  ViewMenu.qml
content/Toolbar/Components/: ToolbarButton.qml
content/Windows/: FindWindow.qml  GotoWindow.qml
content/Windows/EditMenu/: FindWindow.qml  GotoWindow.qml
content/Windows/HelpMenu/: AboutWindow.qml
notepad_7/: qmldir
src/: toolbar.py
